# grid-1

./: CMakeLists.txt  impl2.c  initial_conditions.txt  initial_conditions1.txt  input.txt  lab1.c  lab2.cpp  main.c  temperature_matrix.txt
